Revision history for App-Doh

          - Editing posts works!
          - Added ::Auth::Htpasswd to bypass auth for static page generation
          - Renamed attribute handler class to ::Attributes
          - Moved attribute handlers to own class
          - Deleted ::Auth::Htpasswd
          - Addd Authorization role using subroutine attributes
          - Dropped namespace::sweep in favour of namespace::autoclean
          - New markdown files created from a template
          - Added metadata author and date attributes to posts
          - Added build status badge to markdown
          - Fixed undefined variable warning in Request
          - Fixed undefined ENV variable warning in Server
          - Added prev and next links to posts
          - Index page now even more fluid
          - Added .travis.yml
          - Static site posts index works!
          - Refactored L10n domain names
          - Using strictures internally
          - Added strictures::defanged
          - Dropped appclass and config_class attrs from ::Server
          - Posts list indents / outdents correctly
          - Added JS navbar scroller
          - Debugging static posts
          - Added Deutche PO file
          - Updated metadata
          - Can create CSS one theme at a time
          - Post lists working
          - Refactored get_stash load_page and navigation model calls
          - Added Posts model. Created Functions and Role::PageLoading
          - Added metadata to markdown files
          - Added generate and view static links
          - Excluded Markdown class from POD help listing
          - Fixed CSS bug. Editor textarea back at full width
          - Just one word. Serve the static html through Plack server
          - Changed markdown class from bash to shell .md files
          - Added support for triple grave in Markdown
          - Moved input scrubbing function to the Request object

0.2.1     2014-04-25 13:29:02
          - Bumped version for release