@@ -5,14 +5,15 @@ perl              = 5.010001
 namespace::autoclean = 0.19
 strictures        = 1.004004
 App::Ack          = 2.12
-Class::Usul       = v0.43.0
+Class::Usul       = v0.44.0
 Daemon::Control   = 0.000009
-File::DataClass   = v0.37.0
+Exporter::Tiny    = 0.026
+File::DataClass   = v0.41.0
 HTML::Accessors   = v0.11.0
 HTTP::Body        = 1.11
 HTTP::Message     = 6.06
 Module::Pluggable = 4.8
-Moo               = 1.003
+Moo               = 1.004
 Plack             = 1.0018
 Plack::Middleware::Auth::Htpasswd = 0.02
 Plack::Middleware::Deflater       = 0.08
@@ -23,9 +24,10 @@ Starman           = 0.3000
 Template          = 2.22
 Text::MultiMarkdown = 1.000034
 Try::Tiny         = 0.18
+Type::Tiny        = 0.030
 URI               = 1.60
 Web::Simple       = 0.020
-Unexpected        = v0.22.0
+Unexpected        = v0.23.0
 XML::Simple       = 2.18
 YAML::Tiny        = 1.62
 
