@@ -7,3 +7,4 @@
    <button class="btn btn-submit" name="_method" type="submit"
            value="rename_file">[% loc( 'Rename' ) %]</button>
 </form>
+<p>[% page.old_path %]</p>
